<resources>
    <string name="app_name">room</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="enter_det">Enter Details Of Task</string>
    <string name="enter_title">Enter Title Of Task</string>
    <string name="closed">closed</string>
    <string name="open">open</string>
    <string name="sort_by_priority">Sort By Priority</string>
    <string name="sort_by_title">Sort By Title</string>
    <string name="priority">Priority</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="status">Status</string>

</resources>